syntax = "proto3";

package rabbit.enum;

option go_package = "github.com/aide-family/rabbit/pkg/enum;enum";
option java_multiple_files = true;
option java_package = "rabbit.enum";

enum WebhookAPP {
	WebhookAPP_UNKNOWN = 0;
	OTHER = 1;
	DINGTALK = 2;
	WECHAT = 3;
	FEISHU = 4;
}

enum HTTPMethod {
	HTTPMethod_UNKNOWN = 0;
	GET = 1;
	POST = 2;
	PUT = 3;
	DELETE = 4;
	PATCH = 5;
}

enum GlobalStatus {
	GlobalStatus_UNKNOWN = 0;
	ENABLED = 1;
	DISABLED = 2;
}

enum MessageStatus {
	MessageStatus_UNKNOWN = 0;
	Pending = 1;
	Sending = 2;
	Sent = 3;
	Failed = 4;
	Cancelled = 5;
}

enum MessageType {
	MessageType_UNKNOWN = 0;
	Email = 1;
	Webhook = 2;
	SMS = 3;
}

enum TemplateAPP {
	TemplateAPP_UNKNOWN = 0;
	TEMPLATE_APP_EMAIL = 1;
	TEMPLATE_APP_SMS = 2;
	TEMPLATE_APP_WEBHOOK_OTHER = 3;
	TEMPLATE_APP_WEBHOOK_DINGTALK = 4;
	TEMPLATE_APP_WEBHOOK_WECHAT = 5;
	TEMPLATE_APP_WEBHOOK_FEISHU = 6;
}